fix feign rpc client